Alterações landing page

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -70,10 +70,8 @@
     </header>
     <main style="position: relative;">
         <section class="section section-main" id="home">
-            <div class="main-carousel" data-flickity='{ "lazyLoad": true, "autoPlay": true }'>
-                <div class="carousel-cell" style="background: url('assets/images/teste.png');">
-                </div>
-                <div class="carousel-cell" style="background: url('assets/images/teste.png');">
+            <div class="main-carousel" data-flickity='{ "lazyLoad": true, "autoPlay": false }'>
+                <div class="carousel-cell">
                 </div>
             </div>
             <div class="content banner-content">
@@ -83,18 +81,11 @@
                             <h2><span>ATENAS</span> Formaturas</h2>
                         </div>
                         <div class="text">
-                            <p>Com Atenas Formaturas, sua jornada acadêmica se transforma em uma celebração memorável. descubra como podemos tornar sua formatura uma experiência única!</p>
+                            <p>Com a Atenas Formaturas, sua jornada acadêmica se transforma em uma celebração memorável. Descubra como podemos tornar sua formatura uma experiência única!</p>
                         </div>
                         <div class="lnk-area">
-                            <a href="portfolio.html" class="portfolio-lnk">Portfólio</a>
                             <a href="https://api.whatsapp.com/send?phone=553534251890" class="offer-lnk">Faça um orçamento</a>
                         </div>
-                    </div>
-                    <div class="swipe-down">
-                        <div class="icon">
-                            <img src="assets/images/arrow-down.svg" alt="">
-                        </div>
-                        <div class="txt">Deslize<br>Abaixo</div>
                     </div>
                 </div>
                 <div class="info">
@@ -105,7 +96,7 @@
                             </div>
                             <div class="text">
                                 <div class="title">Clientes</div>
-                                <div class="number">+40832</div>
+                                <div class="number">+42000</div>
                             </div>
                         </div>
                         <div class="item">
@@ -114,7 +105,7 @@
                             </div>
                             <div class="text">
                                 <div class="title">Eventos</div>
-                                <div class="number">+722</div>
+                                <div class="number">+800</div>
                             </div>
                         </div>
                         <div class="item">
@@ -128,12 +119,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="swipe-down" id="mobile-swipe-down">
-                    <div class="icon">
-                        <img src="assets/images/arrow-down.svg" alt="">
-                    </div>
-                    <div class="txt">Deslize<br>Abaixo</div>
-                </div>
             </div>
         </section>
         <section class="section section-full about" id="about">
@@ -144,11 +129,11 @@
                     </div>
                     <div class="txt-content textAlign">
                         <div class="title">
-                            <h2>16 Anos de Experiência</h2>
+                            <h2>17 Anos de Experiência</h2>
                         </div>
                         <div class="txt">
                             <p>
-                                Somos uma renomada empresa de fotografia especializada em capturar momentos inesquecíveis de formaturas. Desde 2007, temos o prazer de fazer parte desse importante marco na vida de tantos jovens, eternizando memórias através das lentes de nossas câmeras.
+                                Somos uma renomada empresa de fotografia especializada em capturar momentos inesquecíveis de formaturas. Desde 2007, temos o prazer de fazer parte desse importante marco na vida de tantos formandos, eternizando memórias através das lentes de nossas câmeras.
                                 <br><br>
                                 Na Atenas Formaturas, entendemos que a formatura é um evento único e significativo, repleto de emoções e conquistas. É por isso que nos esforçamos para oferecer um serviço excepcional, capturando cada detalhe e cada sorriso, para que esses momentos sejam preservados para sempre.
                                 <br><br>
@@ -244,13 +229,14 @@
                     <h2>Serviços</h2>
                 </div>
                 <div class="section-text">
-                    <p>Na Atenas Formaturas, transformamos sua graduação em uma experiência inesquecível, oferecendo serviços personalizados
-                        para celebrar seu sucesso acadêmico da maneira mais especial possível.</p>
+                    <p>Na Atenas Formaturas, oferecemos uma gama completa de serviços para complementar sua 
+                        jornada até a formatura. Desde cobertura fotográfica até acessórios para os formandos, estamos
+                        aqui para garantir que cada aspecto seja tratado com cuidado e atenção especial.</p>
                 </div>
                 <div class="item-list">
                     <div class="item" id="first-item">
                         <div class="iconx">
-                            <img src="assets/images/IconBox.png" alt="">
+                            <img src="assets/images/service1.png" alt="">
                         </div>
                         <div class="title">Cobertura Fotográfica</div>
                         <div class="desc">A Atenas Formaturas está dedicada a capturar todos os momentos especiais relacionados à sua
@@ -261,7 +247,7 @@
                     </div>
                     <div class="item">
                         <div class="iconx">
-                            <img src="assets/images/IconBox-white.svg" alt="">
+                            <img src="assets/images/service2.png" alt="">
                         </div>
                         <div class="title">Edição profissional de fotos</div>
                         <div class="desc">A qualidade das nossas imagens não termina com o clique da câmera. Na Atenas Formaturas,
@@ -274,7 +260,7 @@
                     </div>
                     <div class="item">
                         <div class="iconx">
-                            <img src="assets/images/IconBox-white.svg" alt="">
+                            <img src="assets/images/service3.png" alt="">
                         </div>
                         <div class="title">Confecção de álbuns fotográficos</div>
                         <div class="desc">Na Atenas Formaturas, entendemos que as preferências e os orçamentos variam. É por isso que
@@ -287,11 +273,15 @@
                     </div>
                     <div class="item">
                         <div class="iconx">
-                            <img src="assets/images/IconBox-white.svg" alt="">
+                            <img src="assets/images/service4.png" alt="">
                         </div>
-                        <div class="title">Fornecimento de becas</div>
-                        <div class="desc">Oferecemos becas de alta qualidade, confeccionadas em microfibra, para que você esteja impecável
-                            em sua celebração. Realizamos as medições com antecedência para assegurar que você desfrute do seu grande dia com conforto e elegância.</div>
+                        <div class="title">Acessórios para os formandos</div>
+                        <div class="desc">Oferecemos uma ampla variedade de itens essenciais para tornar a sua cerimônia de formatura
+                            ainda mais memorável e sofisticada. Desde becas elegantes até capelos tradicionais, passando
+                            por canudos para certificados e placas de homenagem, nossa empresa está aqui para garantir
+                            que cada detalhe da sua celebração seja perfeito. Além disso, oferecemos convites exclusivos
+                            para convidar seus entes queridos para este momento especial. Conte com a Atenas para fazer
+                            da sua formatura um evento inesquecível.</div>
                     </div>
                 </div>
             </div>
@@ -608,7 +598,7 @@
                             inesquecível. Sua celebração começa com uma mensagem.
                         </div>
                         <div class="item-btn">
-                            <a href="mailto:contato@atenasformaturas.com">contato@atenasformaturas.com</a>
+                            <a href="mailto:atenasformaturas@hotmail.com">atenasformaturas@hotmail.com</a>
                             <a href="https://api.whatsapp.com/send?phone=553534251890">(35) 3425-1890</a>
                         </div>
                     </div>
@@ -691,11 +681,10 @@
                 <div class="footer-mid">
                     <div class="footer-nav">
                         <ul>
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#about">Sobre</a></li>
-                            <li><a href="service.html">Serviços</a></li>
-                            <li><a href="portfolio.html">Portfólio</a></li>
-                            <li><a href="#customers">Clientes</a></li>
+                            <li><a href="#home" class="active-lnk">Home</a></li>
+                            <li><a href="#about" class="">Sobre</a></li>
+                            <li><a href="#services" class="">Serviços</a></li>
+                            <li><a href="#portfolio" class="">Portfólio</a></li>
                         </ul>
                     </div>
                 </div>
