alt landing page

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -236,7 +236,7 @@
                 <div class="item-list">
                     <div class="item" id="first-item">
                         <div class="iconx">
-                            <img src="assets/images/service1.png" alt="">
+                            <img src="assets/images/services1.png" alt="">
                         </div>
                         <div class="title">Cobertura Fotográfica</div>
                         <div class="desc">A Atenas Formaturas está dedicada a capturar todos os momentos especiais relacionados à sua
@@ -247,7 +247,7 @@
                     </div>
                     <div class="item">
                         <div class="iconx">
-                            <img src="assets/images/service2.png" alt="">
+                            <img src="assets/images/services2.png" alt="">
                         </div>
                         <div class="title">Edição profissional de fotos</div>
                         <div class="desc">A qualidade das nossas imagens não termina com o clique da câmera. Na Atenas Formaturas,
@@ -260,7 +260,7 @@
                     </div>
                     <div class="item">
                         <div class="iconx">
-                            <img src="assets/images/service3.png" alt="">
+                            <img src="assets/images/services3.png" alt="">
                         </div>
                         <div class="title">Confecção de álbuns fotográficos</div>
                         <div class="desc">Na Atenas Formaturas, entendemos que as preferências e os orçamentos variam. É por isso que
@@ -273,7 +273,7 @@
                     </div>
                     <div class="item">
                         <div class="iconx">
-                            <img src="assets/images/service4.png" alt="">
+                            <img src="assets/images/services4.png" alt="">
                         </div>
                         <div class="title">Acessórios para os formandos</div>
                         <div class="desc">Oferecemos uma ampla variedade de itens essenciais para tornar a sua cerimônia de formatura
