alt landing page

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -234,7 +234,7 @@
                         aqui para garantir que cada aspecto seja tratado com cuidado e atenção especial.</p>
                 </div>
                 <div class="item-list">
-                    <div class="item" id="first-item">
+                    <div class="item">
                         <div class="iconx">
                             <img src="assets/images/services1.png" alt="">
                         </div>
