--- a/public/home/index.html
+++ b/public/home/index.html
@@ -47,7 +47,7 @@
                 <li><a href="#about" class="">Sobre</a></li>
                 <li><a href="#services" class="">Serviços</a></li>
                 <li><a href="#portfolio" class="">Portfólio</a></li>
-                <li><a href="https://atenasformatura.com.br/dashboard" class="offer-lnk btnAreaCliente">Área do Cliente</a></li>
+                <li><a href="/dashboard" class="offer-lnk btnAreaCliente">Área do Cliente</a></li>
             </ul>
         </nav>
         <nav style="display: none;">
